Include React.js UI module into the Maven build. Closes #2